5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1793_3123.log
== TEST (2019-05-30 18:31:35) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
m=((v[n-1])**(-1))/n
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:32:52) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
m=((v[n-1])**(-1))/n
print(round(m*8, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:33:13) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
m=((v[n-1])**(-1))/n
print(round(m*8, 2))
	
-- EXECUTION TIME:
0.435446
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
0.14
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
0.2
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
0.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:33:25) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
m=((v[n-1])**(-1))/n
print(round(m*8, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:20) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
m=(1/sum(v))/n
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:40:37) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0
while(i<size(v)-1):
	k=v[i]**-1
	s=s+k
	i=i+1
m=s/n
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:41:09) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0
while(i<size(v)):
	k=v[i]**-1
	s=s+k
	i=i+1
m=s/n
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:24) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0
while(i<size(v)-1):
	k=v[i]**-1
	s=s+k
	i=i+1
m=s/n
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:46:00) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0
while(i<size(v)-1):
	k=1/v[i]
	s=s+k
	i=i+1
m=s* (1/n)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:58:43) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<size(v)):
	k=v[i]**-1
	s=s+k
	i=i+1
m=s* (1/n)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:59:59) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<=size(v)):
	k=v[i]**-1
	s=s+k
	i=i+1
m=s* (1/n)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:00:25) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<size(v)-1):
	k=v[i]**-1
	s=s+k
	i=i+1
m=s* (1/n)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:00:58) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)-1
i=0
s=0

while(i<size(v)-1):
	k=v[i]**-1
	s=s+k
	i=i+1
m=s* (1/n)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:01:46) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<size(v)):
	k=v[i]**-1
	s=s+k
	i=i+1
m=s* (1/n)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:06:43) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<size(v)):
	if(v[-1]!=v[i]):
		k=v[i]**-1
		s=s+k
		i=i+1
	else:
		i=i-1
		k=v[i]**-1
		s=s+k
m=s/n
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:08:03) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<size(v)):
	if(v[-1]!=v[i]):
		k=v[i]**-1
		s=s+k
		i=i+1
	elif(v[-1]==v[i]:
		i=i-1
		k=v[i]**-1
		s=s+k
m=s/n
print(round(m, 2))
	
-- ERROR:
File "XXXX", line 12
    elif(v[-1]==v[i]:
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:09:15) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<size(v)-1):
	k=v[i]**-1
	s=s+k
	i=i+1
	
m=(s/n)**-1
print(round(m, 2))
	
-- EXECUTION TIME:
0.437988
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
4.25
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
2.89
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
2.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:09:22) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<size(v)):
	k=v[i]**-1
	s=s+k
	i=i+1
	
m=(s/n)**-1
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:09:25) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")))
n=size(v)
i=0
s=0

while(i<size(v)):
	k=v[i]**-1
	s=s+k
	i=i+1
	
m=(s/n)**-1
print(round(m, 2))
	
-- EXECUTION TIME:
0.493473
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
3.95
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
2.69
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
2.33
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
